B.2 & B.3 - Created ability to generate course reports with search functionality to filter by Course Start Date.

--- a/WGUTermTracker/WGUTermTracker.csproj
+++ b/WGUTermTracker/WGUTermTracker.csproj
@@ -89,6 +89,9 @@
 	  <MauiXaml Update="Views\CourseDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\CourseStartDateReportPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\TermDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
